--- a/package.json
+++ b/package.json
@@ -2,7 +2,13 @@
     "name": "airways_client",
     "version": "0.1.0",
     "private": true,
+    "proxy": {
+        "/api/*": {
+            "target": "http://airways_server.dev"
+        }
+    },
     "dependencies": {
+        "animate.css": "^3.6.1",
         "axios": "^0.18.0",
         "lodash": "^4.17.5",
         "moment": "^2.22.0",
@@ -11,6 +17,7 @@
         "npm-run-all": "^4.1.2",
         "react": "^16.3.1",
         "react-dom": "^16.3.1",
+        "react-loading": "^1.0.1",
         "react-redux": "^5.0.6",
         "react-router-dom": "^4.2.2",
         "react-router-redux": "^5.0.0-alpha.9",
