--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
         "animate.css": "^3.6.1",
         "axios": "^0.18.0",
         "lodash": "^4.17.5",
+        "material-ui": "^0.20.0",
         "moment": "^2.22.0",
         "moment-timezone": "^0.5.14",
         "node-sass-chokidar": "^1.2.2",
         "npm-run-all": "^4.1.2",
         "react": "^16.3.1",
         "react-dom": "^16.3.1",
+        "react-image-gallery": "^0.8.7",
         "react-loading": "^1.0.1",
         "react-redux": "^5.0.6",
         "react-router-dom": "^4.2.2",
