--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "react": "^16.3.1",
         "react-dom": "^16.3.1",
         "react-image-gallery": "^0.8.7",
+        "react-image-magnify": "^2.6.2",
         "react-loading": "^1.0.1",
         "react-redux": "^5.0.6",
         "react-router-dom": "^4.2.2",
