--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "dependencies": {
         "animate.css": "^3.6.1",
         "axios": "^0.18.0",
+        "idle-js": "^0.1.3",
         "lodash": "^4.17.5",
         "material-ui": "^0.20.0",
         "moment": "^2.22.0",
