added map image magnify back

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "private": true,
     "proxy": {
         "/api/*": {
-            "target": "http://airways_server.dev"
+            "target": "http://airways_server.test"
         }
     },
     "dependencies": {
@@ -31,7 +31,8 @@
     },
     "scripts": {
         "build-css": "node-sass-chokidar src/ -o src/",
-        "watch-css": "npm run build-css && node-sass-chokidar src/ -o src/ --watch --recursive",
+        "watch-css":
+            "npm run build-css && node-sass-chokidar src/ -o src/ --watch --recursive",
         "start-js": "react-scripts start",
         "start": "npm-run-all -p watch-css start-js",
         "build-js": "react-scripts build",
